fix: remove auth check for get requests
